Minor fixes, styles

--- a/mediaqueries.css
+++ b/mediaqueries.css
@@ -61,6 +61,11 @@
     text-align: center;
   }
 
+  .title h3{
+    font-size: 1.5rem;
+    text-align: center;
+  }
+
   #desktop-nav {
     display: none;
   }
